@@ -13,12 +13,13 @@
     TransferLog /var/log/apache2/cash.orbit/access_log
 
     <Location "/">
+        Require all granted
         DirectoryIndex index.html
     </Location>
 
     <Location "/etc">
         Require all denied
-    </Directory>
+    </Location>
 </VirtualHost>
 
 <IfDefine SSL_FIXME>
@@ -47,9 +48,14 @@
             downgrade-1.0 force-response-1.0
     </IfModule>
 
+    <Location "/">
+        Require all granted
+        DirectoryIndex index.html
+    </Location>
+
     <Location "/etc">
         Require all denied
-    </Directory>
+    </Location>
 </VirtualHost>
 
 </IfDefine>
