@@ -1,16 +1,17 @@
 <!DOCTYPE html
-   PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+   PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+          "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <!--
     Copyright (C) 2018 Alpha Griffin
     @%@~LICENSE~@%@
 -->
 <head>
-    <title>ORBIT | Bitcoin Cash Tokens</title>
+    <title>Bitcoin Cash Tokens | ORBIT</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 </head>
 <body>
-    <h1>ORBIT</h1>
+    <h1>ORBIT: Op_Return Bitcoin-Implemented Tokens</h1>
     <h2>Tokens on Bitcoin Cash</h2>
 
     <p>This website still under development. Until it's ready, discover more by visiting the projects below on GitHib.</p>
