@@ -1,5 +1,7 @@
 Copyright (C) 2018 Alpha Griffin
 @%@~LICENSE~@%@
 
+saw_072718_2 - Fix Apache config and xhtml validation errors.
+
 saw_072718_1 - First commit.
 
